htdocs/t/default.css
/* ... */
.top-alphabetical a:hover{text-decoration:underline;}
.top-alphabetical .now{color:#fff;background:#ee0245 url(bg/ingredient/now.png) no-repeat 0 0;display:block;float:none;line-height:18px;text-decoration:none !important;padding-left:10px;margin-left:0;}
.top-alphabetical .dis{color:#ccc;text-decoration:none !important;cursor:default;}
.top-alphabetical h3{font-size:150%;font-weight:normal;margin:17px 0 6px 11px;}
#ingredients-page .count-cocktails{background:url(bg/ingredient/fixed.png) no-repeat top left;width:153px;height:73px;padding:15px 0 0 15px;font-size:11px;position:fixed;right:36px;top:297px;}
#ingredients-page .count-cocktails strong{display:block;color:#eb1c57;font-size:12px;padding:4px 0 9px;}
#ingredients-page .count-cocktails input{font-size:11px;}
#ingredients-page .count-cocktails{}

/* Image buttons */
button{background:url(button/green-buttons.png) no-repeat 0 0;width:10px;height:20px;margin:0;padding:0;border:0;overflow:hidden;text-indent:-100em;}
button.bt-mix{background:url(button/grey-buttons.png) no-repeat 0 0;width:85px;height:30px;}
button.bt-new-bar{background-position:0 0;height:28px;width:85px;}
button.bt-enter{background-position:0 -28px;height:28px;width:50px;}
button.bt-search{background-position:0 -56px;height:28px;width:50px;}
button.bt-lost-pass{background-position:0 -146px;height:28px;width:104px;}
button.bt-deliver{background-position:0 -297px;height:20px;width:112px;}
button.bt-add-in-account{background-position:0 -298px;height:36px;width:112px;cursor:pointer;}
button.bt-add-in-account2{background-position:0 -115px;height:31px;width:112px;}
button.bt-pick-up-utensils{background-position:0 -329px;height:29px;width:116px;}
button.bt-all-dishes{background-position:0 -358px;height:29px;width:116px;}
button.bt-korol-vote{background-position:0 -387px;height:31px;width:112px;}
button.bt-less,
button.bt-del{background:url(button/red-buttons.png) no-repeat;cursor:pointer;}
button.bt-print-how,
button.bt-close-how,
button.bt-want-slap,
button.bt-view-how,
button.bt-love-her,
button.bt-more,
button.bt-send,
button.bt-close-legend{background:url(button/n_green-buttons.png) no-repeat 0 -36px;width:155px;height:36px;cursor:pointer;}
button.bt-close-how{background-position:0 -144px;height:36px;width:145px;}
button.bt-want-slap{background-position:0 -72px;height:36px;width:155px;}
button.bt-view-how{background-position:0 -236px;height:36px;width:146px;}
button.bt-love-her{display:none;background-position:0 -108px;height:36px;width:118px;}
/* InFuture */
button.bt-print-how{background-position:0 -180px;height:36px;width:147px;}
button.bt-more{background-position:0 -216px;height:19px;width:16px;}
button.bt-less{background-position:-17px -31px;height:19px;width:16px;}
button.bt-send{background-position:0 -272px;height:38px;width:115px;}
button.bt-send-disabled {background: url(button/grey-buttons.png) no-repeat 0 -30px;height:36px;width:110px;}
button.bt-del{background-position:0 -31px;height:20px;width:16px;}
.i-close{background:url(icon/close.png) no-repeat 0 0;display:block;width:10px;height:10px;}
#view-advert a[href $='.cdr']{padding:1px 0 1px 21px;background:url(icon/cdr.png) no-repeat 0 center;line-height:16px;}
#view-advert a[href $='.ai']{padding:1px 0 1px 21px;background:url(icon/ai.png) no-repeat 0 center;line-height:16px;}
.del{background:url(icon/del.png) no-repeat 0 0;width:5px;height:5px;overflow:hidden;text-indent:-100em;display:block;}
#bottom{font-size:1.1em;line-height:1.7;overflow:hidden;color:#788894;clear:both;padding-top:40px;}
#bottom .main-menu{float:right;}
.drag_cursor{cursor:url(/t/grabbing.cur),-moz-grabbing;}
#error_display{display:none;background:url(/t/button/info.png) no-repeat;color:#999999;font-size:13px;padding:4px 0pt 0pt 35px;height:35px;}
#form_success{display:none;background:url(/t/button/info.png) no-repeat;color:#999999;height:35px;padding:0px 0pt 0pt 35px;width:140px;font-size:11px;margin-top:14px;}

#order-page .b-content {font-size:12px; width:100%;}
#order-page .note { background: #F1F7B6 url(/t/button/info.png) no-repeat 12px; font-size:13px; padding:9px 9px 9px 47px;}
#order-page #order_more { margin-left: 10px; background: url(/t/button/info.png) no-repeat 12px; font-size:13px; padding:9px 9px 9px 47px;}
#order-page textarea {background:#f3f3f3; border:0 solid #c9c9c9; border-width:1px 0 0 0px; margin-left:0; padding:4px 0 0 4px; overflow:auto;}
#order-page form { font-size:100%; margin: 0; padding: 0; min-width: 500px; max-width: 600px; width: 560px; }
#order-page form fieldset {/* clear: both; */ padding: 10px; margin: 0; }
#order-page form fieldset legend { font-size:1.2em; font-weight: bold; padding: 12px 0;}
#order-page form label { display: block; float: left; padding: 0; margin: 5px 0 0 10px; text-align: left; line-height: 25px;width: 120px;}

#order-page form label#label_city_moscow,
#order-page form label#label_city_mo,
#order-page form label#label_face_phys,
#order-page form label#label_face_legal {display: inline; float:none; margin: 0;}

#order-page form input, #order-page form textarea { /* display: inline; */ width:auto; margin:5px 0 0 10px; }
#order-page form select { /* display: inline; */ width:auto; margin:5px 0 0 0; }
#order-page form input.text_field {
	height: 24px; 
	font-size: 1.2em; 
	width: 158px; 
	background:#f3f3f3;
	border:0 solid #c9c9c9;
	border-width:1px 0 0 0;
	margin-left:0; 
	padding:4px 0 0 4px;
	line-height:24px;
}
#order-page form .radio_block input { margin: 0 5px 0 10px; }

#order-page form input.error, #order-page form textarea.error { border: 0 #ec275f solid; border-width:1px 0 0 0; }
#order-page form input#time1 { width: 50px;}
#order-page form input#time2 { margin: 5px 0 0 2px; width: 50px; }
#order-page form input#num_guests { width: 50px; }
#order-page form input#phone11,
#order-page form input#phone21 { width: 32px; }
#order-page form input#phone12,
#order-page form input#phone22 { margin: 5px 0 0 2px; width: 32px;}
/* ... */

